--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Template</title>
+	<title>Coaching</title>
 	<link href="/public/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -14,7 +14,16 @@
 
 		{{ template "header.tmpl" }}
 
-		<div class="container">
+		<div class="container p-4">
+			<div class="row">
+				<!-- On small screens and up (sm), use half the grid (6 columns). On extra small screens (xs, which is default), use full width (12 columns). -->
+				<div class="col-12 col-sm-6 d-flex justify-content-center">
+					<img src="/public/images/fat.jpeg" class="img-fluid rounded">
+				</div>
+				<div class="col-12 col-sm-6 d-flex justify-content-center">
+					<img src="/public/images/abs.jpg" class="img-fluid rounded">
+				</div>
+			</div>
 		</div>
 
 		<footer class="py-3 my-4">
